# cython_swig

./: .gitignore  .gitmodules  Makefile.am  README.rst  autogen.sh  build.sh  configure.ac  requirements.txt  set_env.sh  slide_builder.sh  swig_cython.rst  test_extensions.sh
c/: Makefile.am  adder_example.c  c_adder.c  test_adder.c
cython/: c_adder.pxd  cy_adder.c  cy_adder.pyx  setup.py  test_cython_adder.py  tests.py
doc/: swig_cython.rst
docs/: Makefile
docs/source/: conf.py  index.rst
libadder/: Makefile.am  adder.c  adder.h  configure.ac
swig/: adder.i  setup.py  test_adder.py  test_swig_adder.py
